// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Table /> AlignTableCellContentCenter story renders snapshot 1`] = `
<div
  style="background-color: white;"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell text-center"
        >
          Name
        </th>
        <th
          class="table-header-cell text-center"
        >
          Status
        </th>
        <th
          class="table-header-cell text-center"
        >
          Chart
        </th>
        <th
          class="table-header-cell text-center"
        >
          Window
        </th>
        <th
          class="table-header-cell text-center"
        >
          Last Update
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 5
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> AlignTableCellContentRight story renders snapshot 1`] = `
<div
  style="background-color: white;"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell text-right"
        >
          Name
        </th>
        <th
          class="table-header-cell text-right"
        >
          Status
        </th>
        <th
          class="table-header-cell text-right"
        >
          Chart
        </th>
        <th
          class="table-header-cell text-right"
        >
          Window
        </th>
        <th
          class="table-header-cell text-right"
        >
          Last Update
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 5
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> Default story renders snapshot 1`] = `
<div
  style="background-color: white;"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell"
        >
          Name
        </th>
        <th
          class="table-header-cell"
        >
          Status
        </th>
        <th
          class="table-header-cell"
        >
          Chart
        </th>
        <th
          class="table-header-cell"
        >
          Window
        </th>
        <th
          class="table-header-cell"
        >
          Last Update
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 5
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> SortableInteractive story renders snapshot 1`] = `
<div
  style="background-color: white;"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell"
        >
          <button
            class="clickable-style clickable-style--link clickable-style--brand button button--link table-header-cell__sort-button"
            type="button"
          >
            Sortable
            <svg
              class="icon"
              fill="currentColor"
              height="1rem"
              role="img"
              style="--icon-size: 1rem;"
              viewBox="0 0 24 24"
              width="1rem"
              xmlns="http://www.w3.org/2000/svg"
            >
              <title>
                Sort
              </title>
              <path
                d="M12 5.83l2.46 2.46c.39.39 1.02.39 1.41 0 .39-.39.39-1.02 0-1.41L12.7 3.7c-.39-.39-1.02-.39-1.41 0L8.12 6.88c-.39.39-.39 1.02 0 1.41.39.39 1.02.39 1.41 0L12 5.83zm0 12.34l-2.46-2.46c-.39-.39-1.02-.39-1.41 0-.39.39-.39 1.02 0 1.41l3.17 3.18c.39.39 1.02.39 1.41 0l3.17-3.17c.39-.39.39-1.02 0-1.41-.39-.39-1.02-.39-1.41 0L12 18.17z"
              />
            </svg>
          </button>
        </th>
        <th
          class="table-header-cell"
        >
          Not sortable
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Value 1
        </td>
        <td
          class="table-cell"
        >
          Value A
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Value 3
        </td>
        <td
          class="table-cell"
        >
          Value B
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Value 2
        </td>
        <td
          class="table-cell"
        >
          Value C
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Value 4
        </td>
        <td
          class="table-cell"
        >
          Value D
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> TableWithCaption story renders snapshot 1`] = `
<div
  style="background-color: white;"
>
  <table
    class="table"
  >
    <caption>
      Optional caption for the table. Must be first descendant of Table if used.
    </caption>
    <thead>
      <tr
        class="table-row table-row--header"
      >
        <th
          class="table-header-cell"
        >
          Name
        </th>
        <th
          class="table-header-cell"
        >
          Status
        </th>
        <th
          class="table-header-cell"
        >
          Chart
        </th>
        <th
          class="table-header-cell"
        >
          Window
        </th>
        <th
          class="table-header-cell"
        >
          Last Update
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row"
      >
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 5
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;

exports[`<Table /> ZebraHover story renders snapshot 1`] = `
<div
  style="background-color: white;"
>
  <table
    class="table"
  >
    <thead>
      <tr
        class="table-row table-row--header table__row--zebra"
      >
        <th
          class="table-header-cell"
        >
          Name
        </th>
        <th
          class="table-header-cell"
        >
          Status
        </th>
        <th
          class="table-header-cell"
        >
          Chart
        </th>
        <th
          class="table-header-cell"
        >
          Window
        </th>
        <th
          class="table-header-cell"
        >
          Last Update
        </th>
      </tr>
    </thead>
    <tbody>
      <tr
        class="table-row table__row--zebra"
      >
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 1, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row table__row--zebra"
      >
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 2, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row table__row--zebra"
      >
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 3, Table Cell 5
        </td>
      </tr>
      <tr
        class="table-row table__row--zebra"
      >
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 1
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 2
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 3
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 4
        </td>
        <td
          class="table-cell"
        >
          Table Row 4, Table Cell 5
        </td>
      </tr>
    </tbody>
  </table>
</div>
`;
